--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,8 @@ https://templatemo.com/tm-589-lugx-gaming
               <h6>Contact Us</h6>
               <h2>Say Hello!</h2>
             </div>
-            <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+            <p>🎮 Welcome to GNIX! Where Gaming Comes Alive!
+Step into the world of endless adventures, epic battles, and unbeatable deals. At GNIX, we bring you the latest games, exclusive offers, and a community built for true gamers. Whether you are a casual player or a hardcore warrior, GNIX is your ultimate destination to play, explore, and conquer</p>
             <ul>
               <li><span>Address</span> Sunny Isles Beach, FL 33160, United States</li>
               <li><span>Phone</span> +123 456 7890</li>
